Fix PolaroidDivider z-Index

--- a/src/components/PolaroidDivider/PolaroidDivider.module.css
+++ b/src/components/PolaroidDivider/PolaroidDivider.module.css
@@ -4,5 +4,6 @@
 	color: black;
 	background-image: url('@/assets/polaroid.png');
 	background-position: center;
+	position: relative;
 	padding: 15px 0px 15px 50px;
 }
